Updated screenshots and minor spacing issues.

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -385,3 +385,9 @@ a:hover, a:focus, a:active {
 .text-secondary {
   color: #ecb807 !important;
 }
+
+/* .profile_image {
+  float: left;
+  padding: 20px;
+  margin: 20px;
+} */
